# nebula-storage

./: .drone.yml  .gitignore  CMakeLists.txt  README-CN.md  README.md
.github/workflows/: docker.yml  main.yaml  pull_request.yml
.linters/cpp/hooks/: pre-commit.sh
ci/: test.sh
cmake/: AddDependentProject.cmake  CPackage.cmake
conf/: CMakeLists.txt  nebula-metad.conf.default  nebula-metad.conf.production  nebula-storaged-listener.conf.production  nebula-storaged.conf.default  nebula-storaged.conf.production
docker/: Dockerfile.metad  Dockerfile.storaged
package/: package.sh  postinst  rpm_postinst
resources/: gflags.json
scripts/: CMakeLists.txt  nebula.service
src/: CMakeLists.txt  get
src/codec/: CMakeLists.txt  Common.h  RowReader.cpp  RowReader.h  RowReaderV1.cpp  RowReaderV1.h  RowReaderV2.cpp  RowReaderV2.h  RowReaderWrapper.cpp  RowReaderWrapper.h  RowWriterV2.cpp  RowWriterV2.h
src/codec/test/: CMakeLists.txt  ResultSchemaProvider.cpp  ResultSchemaProvider.h  RowReaderBenchmark.cpp  RowReaderV1Test.cpp  RowReaderV2Test.cpp  RowWriterBenchmark.cpp  RowWriterV2Test.cpp  SchemaWriter.cpp
src/common/: CMakeLists.txt  IndexKeyUtils.cpp  IndexKeyUtils.h  LogIterator.h  NebulaKeyUtils.cpp  NebulaKeyUtils.h  OperationKeyUtils.cpp  OperationKeyUtils.h  Types.h
src/common/test/: CMakeLists.txt  IndexKeyUtilsTest.cpp  ThriftClientTest.cpp
src/daemons/: CMakeLists.txt  MetaDaemon.cpp  SetupLogging.cpp  StorageDaemon.cpp
src/filter/: CMakeLists.txt  Expressions.cpp  Expressions.h  FunctionManager.cpp
src/kvstore/: CMakeLists.txt  Common.h  CompactionFilter.h  DiskManager.cpp  DiskManager.h  EventListner.h  KVEngine.h  KVStore.h  Listener.cpp  Listener.h  ListenerFactory.h  LogEncoder.cpp  LogEncoder.h  NebulaStore.cpp  NebulaStore.h  Part.cpp  Part.h  PartManager.cpp  PartManager.h  RocksEngine.cpp  RocksEngine.h  RocksEngineConfig.cpp  RocksEngineConfig.h  SnapshotManagerImpl.cpp
src/kvstore/plugins/: CMakeLists.txt
src/kvstore/raftex/: Host.cpp  LogStrListIterator.h  RaftPart.cpp  RaftPart.h  RaftexService.h  SnapshotManager.cpp
src/kvstore/test/: CMakeLists.txt  DiskManagerTest.cpp  LogEncoderTest.cpp  NebulaListenerTest.cpp  NebulaStoreTest.cpp  PartTest.cpp  RocksEngineConfigTest.cpp  RocksEngineTest.cpp  SnapshotLinkTest.cpp
src/kvstore/wal/: AtomicLogBuffer.h  FileBasedWal.cpp  InMemoryLogBuffer.h  InMemoryLogBufferList.h
src/meta/: ActiveHostsMan.cpp  ActiveHostsMan.h  CMakeLists.txt  ClientBasedGflagsManager.h  KVBasedClusterIdMan.h  MetaServiceHandler.cpp  MetaServiceHandler.h  MetaServiceUtils.cpp  MetaServiceUtils.h  MetaVersionMan.cpp  MetaVersionMan.h  RootUserMan.h
src/meta/common/: MetaCommon.h
src/meta/processors/: BaseProcessor.h  BaseProcessor.inl  Common.h
src/meta/test/: ActiveHostsManTest.cpp  AdminClientTest.cpp  AuthProcessorTest.cpp  BalanceDataTest.cpp  BalanceIntegrationTest.cpp  BalanceLeaderTest.cpp  BalancerTest.cpp  CMakeLists.txt  ClusterIdManTest.cpp  ConfigManTest.cpp  CreateBackupProcessorTest.cpp  GetBalancePlanTest.cpp  GetStatisTest.cpp  GroupZoneTest.cpp  HBProcessorTest.cpp  IndexProcessorTest.cpp  JobManagerTest.cpp  KVBasedClusterIdManTest.cpp  ListClusterInfoTest.cpp  MetaClientTest.cpp  MetaHttpReplaceHandlerTest.cpp  MetaServiceUtilsTest.cpp  ProcessorTest.cpp  RestoreProcessorTest.cpp  StatisticsIndexTest.cpp  TestUtils.h
src/meta/upgradeData/: CMakeLists.txt  MetaDataUpgrade.cpp  MetaDataUpgrade.h
src/mock/: AdHocIndexManager.cpp  AdHocIndexManager.h  AdHocSchemaManager.cpp  AdHocSchemaManager.h  MockCluster.cpp  MockCluster.h  MockData.cpp  MockData.h  RpcServer.h
src/storage/: BaseProcessor.h  BaseProcessor.inl  CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  CompactionFilter.h  DeleteVertexProcessor.cpp  GeneralStorageServiceHandler.cpp  GeneralStorageServiceHandler.h  GraphStorageServiceHandler.cpp  GraphStorageServiceHandler.h  InternalStorageServiceHandler.cpp  InternalStorageServiceHandler.h  StorageAdminServiceHandler.h  StorageFlags.cpp  StorageFlags.h  StorageServer.cpp  StorageServer.h  StorageServiceHandler.h  get
src/storage/admin/: AdminProcessor.h  AdminTask.cpp  AdminTask.h  AdminTaskManager.cpp  AdminTaskManager.h  AdminTaskProcessor.cpp  AdminTaskProcessor.h  CompactTask.cpp  CompactTask.h  CreateCheckpointProcessor.cpp  DownloadTask.cpp  DownloadTask.h  FlushTask.cpp  FlushTask.h  IngestTask.cpp  IngestTask.h  ListClusterInfoProcessor.cpp  RebuildEdgeIndexProcessor.cpp  RebuildEdgeIndexTask.cpp  RebuildEdgeIndexTask.h  RebuildFTIndexTask.cpp  RebuildFTIndexTask.h  RebuildIndexTask.cpp  RebuildIndexTask.h  RebuildTagIndexProcessor.cpp  (+8 more)
src/tools/: CMakeLists.txt
src/tools/db-dump/: CMakeLists.txt  DbDumpTool.cpp  DbDumper.cpp  DbDumper.h
src/tools/db-upgrade/: CMakeLists.txt  DbUpgrader.cpp  DbUpgrader.h  DbUpgraderTool.cpp  NebulaKeyUtilsV1.cpp  NebulaKeyUtilsV1.h
src/tools/dbDump/: CMakeLists.txt  DbDumper.cpp
src/tools/dump-edges/: DumpEdgesTool.cpp
src/tools/edges-dump/: CMakeLists.txt  EdgesDumpTool.cpp
src/tools/meta-data-upgrade/: CMakeLists.txt  MetaDataUpgrade.cpp  MetaDataUpgrade.h  MetaDataUpgradeTool.cpp  README.md
src/tools/meta-data-upgrade/oldThrift/: CMakeLists.txt  MetaServiceUtilsV1.cpp  MetaServiceUtilsV1.h
src/tools/meta-dump/: CMakeLists.txt  MetaDumpTool.cpp
src/tools/metaDataUpdate/: CMakeLists.txt  MetaDataUpdate.cpp  MetaDataUpdate.h  MetaDataUpdateTool.cpp
src/tools/metaDataUpdate/oldThrift/: CMakeLists.txt  MetaServiceUtils.cpp  MetaServiceUtils.h  MetaServiceUtilsV1.cpp  MetaServiceUtilsV1.h  old.thrift
src/tools/simple-kv-verify/: CMakeLists.txt
src/tools/storage-perf/: CMakeLists.txt  StorageIntegrityTool.cpp  StoragePerfTool.cpp
src/utils/: CMakeLists.txt  DefaultValueContext.h  IndexKeyUtils.cpp  IndexKeyUtils.h  LogIterator.h  MemoryLockCore.h  MemoryLockWrapper.h  NebulaKeyUtils.cpp  NebulaKeyUtils.h  OperationKeyUtils.cpp  OperationKeyUtils.h  ProcessorCounters.h  Types.h  Utils.h
src/version/: CMakeLists.txt  Version.cpp  Version.cpp.in  Version.h
util/br/: backup_example.yaml  go.mod  go.sum  main.go
(+379 files in other folders)
