nebula_add_executable(
    NAME
        meta_dump
    SOURCES
        MetaDumpTool.cpp
    OBJECTS
        ${tools_test_deps}
    LIBRARIES
        ${ROCKSDB_LIBRARIES}
        ${THRIFT_LIBRARIES}
        wangle
)

install(
    TARGETS
        meta_dump
    DESTINATION
        bin
    COMPONENT
        tool
)
